--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -36,21 +36,21 @@ $(function(){
 
 <p><img src="../images/ab.PNG" class="w3-circle border"/>Anindita Basu likes words, languages, and stories; she dislikes whataboutery, laziness, and sweets.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Tfv4bl&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Tfv4bl&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Tulsi ka ped (Hindi)</p></td>
-  <td><p><audio src = "../mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p>Kallo rani (Hindi)</p></td>
-  <td><p><audio src = "../mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Tulsi ka ped (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ab_tulsi.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Kallo rani (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ab_kallorani.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
