--- a/html/author_ap.html
+++ b/html/author_ap.html
@@ -36,19 +36,17 @@ $(function(){
 
 <p><img src="../images/ap.png" class="w3-circle border"/>Ajay Purohit is an engineer by profession, not a writer. He used write during his school days, years ago, and is now trying to revive the habit. He listens to music avidly, watches loads of Hindi films from its golden era, and is a gadget freak. Ajay tweets regularly from <a href = "https://twitter.com/Ajaythetwit" target = "_blank">@Ajaythetwit</a>.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@Ajaythetwit%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1TecX6W&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@Ajaythetwit%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1TecX6W&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  
-</p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Chetana (Hindi)</p></td>
-  <td><p><audio src = "../mp3/ap_chetna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Chetana (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ap_chetna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
