--- a/html/author_mk.html
+++ b/html/author_mk.html
@@ -36,17 +36,17 @@ $(function(){
 
 <p><img src="../images/mk.png" class="w3-circle border"/>Mohammad Kausen is from the tiny village of Dadheru Khurd in Muzaffarnagar of Uttar Pradesh. He lives in Saudi Arabia. He likes art, music, cooking, writing, and anything artistic. He blogs at <a href = "http://mohd-kausen.blogspot.com/" target = "_blank"> मुसाफिर </a>.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@mohdkausen%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WQOKBz&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p> 
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@mohdkausen%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WQOKBz&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Badchalan (Hindi)</p></td>
-  <td><p><audio src = "../mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Badchalan (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
