--- a/html/author_pk.html
+++ b/html/author_pk.html
@@ -36,18 +36,17 @@ $(function(){
 
 <p><img src="../images/pk.jpg" class="w3-circle border"/>Preran Kumar lives in Toronto, the largest city of Canada. Besides writing, he likes to cook. He is extremely fond of Hindi films and counts himself among the foremost fans of Rekha and Amitabh Bachchan. He does not consider a day to be complete without a Lata Mangeshkar song, and he cannot sleep without reading a book. His days start with Mirabai's bhajans and often end with Jagjit Singh's ghazals. He hopes you'll like his stories.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Preran%20Kumar%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Pj7pAU&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Preran%20Kumar%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Pj7pAU&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Ek safar (Hindi)</p></td>
-  <td><p><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Ek safar (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/pk_safar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
