--- a/html/author_sp2.html
+++ b/html/author_sp2.html
@@ -36,17 +36,17 @@ $(function(){
 
 <p><img src="../images/sp2.png" class="w3-circle border"/>Shankhadip Paria lives in Contai, near the sea town of Digha in West Bengal. He likes books, travelling, foods, friends, pirate legends, and Sundays. Shankhadip writes blog posts in Bengali once in a blue moon and, strongly believing that these posts are not the worst ones around, puts them up on his blog at <a href = "https://udorpindi.wordpress.com/" target = "_blank">https://udorpindi.wordpress.com/</a>.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Bengali%20audio%20stories%20by%20@_Shankha%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1SYxJGK&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Bengali%20audio%20stories%20by%20@_Shankha%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1SYxJGK&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Biye barir byakaran (Bengali/Bangla)</p></td>
-  <td><p><audio src = "../mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Biye barir byakaran (Bengali/Bangla)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/sp2_byakaran.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
