--- a/html/author_ss.html
+++ b/html/author_ss.html
@@ -34,21 +34,19 @@ $(function(){
 
 <header class = "w3-padding"><h2>Shishir Somvanshi</h2></header>
 
-<p><img src="../images/ss.png" class="w3-circle border"/>Shishir Somvanshi is a forestry scientist. He writes poems and stories on love and life. His blog is at <a href = "http://www.shishirkikavitayen.blogspot.in/" target = "_blank">http://www.shishirkikavitayen.blogspot.in/</a> and Facebook page at <a href = "http://www.facebook.com/shishirsomvanshiunlimited" target = "_blank">http://www.facebook.com/shishirsomvanshiunlimited</a>.</p>
+<p><img src="../images/ss.png" class="w3-circle border"/>Shishir Somvanshi is a forest scientist. He writes poems and stories on love and life. His blog is at <a href = "http://www.shishirkikavitayen.blogspot.in/" target = "_blank">http://www.shishirkikavitayen.blogspot.in/</a> and Facebook page at <a href = "http://www.facebook.com/shishirsomvanshiunlimited" target = "_blank">http://www.facebook.com/shishirsomvanshiunlimited</a>.</p>
+
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@Shishir_Som%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1NISHlv&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
 
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@Shishir_Som%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1NISHlv&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  
-</p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Punarjanm (Hindi)</p></td>
-  <td><p><audio src = "../mp3/ss_punarjanm.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Punarjanm (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ss_punarjanm.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
