--- a/html/author_anon.html
+++ b/html/author_anon.html
@@ -36,23 +36,21 @@ $(function(){
 
 <p><!--<img src="../images/anon.png" class="w3-circle border"/>-->Life, as we hear it around us, telling us stories.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
-</p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Sale sale sale<br/><span class = "w3-small">Hindi, from Allahabad, in January 2016</span></p></td>
-  <td><p><audio src = "../mp3/anon_sale.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p>Bees rupiya<br/><span class = "w3-small">Hindi, from Allahabad, in February 2016</span></p></td>
-  <td><p><audio src = "../mp3/anon_matar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Sale sale sale<br/><span class = "w3-small">Hindi, from Allahabad, in January 2016</span></p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/anon_sale.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Bees rupiya<br/><span class = "w3-small">Hindi, from Allahabad, in February 2016</span></p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/anon_matar.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
