--- a/html/author_rr.html
+++ b/html/author_rr.html
@@ -36,27 +36,25 @@ $(function(){
 
 <p><img src="../images/rr.png" class="w3-circle border"/>Ruchi Rana lives in Germany and belongs to Allahabad. She carries the tehzeeb of Ganga-Jamuna and Sangam in her being. She is passionate about music, books, and writing, and adores jhumkis and Banarasi stoles. She loves to cook, and to grow plants and flowers in all seasons.  Her day begins with Pt. Bhimsen Joshi's Bhairvi and ends with Begum Akhtar's ethereal baritone.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@RuShiVi%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1RCjTs0&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@RuShiVi%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1RCjTs0&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
-</p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Shukriya aye darakht (Hindi)</p></td>
-  <td><p><audio src = "../mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p>Kaghaz ki khwahishen (Hindi)</p></td>
-  <td><p><audio src = "../mp3/rr_aas.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p>Amit chhaap (Hindi)</p></td>
-  <td><p><audio src = "../mp3/rr_phagun.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Shukriya aye darakht (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rr_darakht.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Kaghaz ki khwahishen (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rr_aas.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Amit chhaap (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rr_phagun.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
