--- a/html/author_rs.html
+++ b/html/author_rs.html
@@ -36,23 +36,21 @@ $(function(){
 
 <p><img src="../images/rs.png" class="w3-circle border"/>Rahul Shabd is from Gwalior, Madhya pradesh. He likes to write stories and poems. He also likes music, movies, food, and cricket.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@rahulshabd%20at%20@afsanaPodcast%20&url=http%3A%2F%2Fbit.ly%2F1Qf7Dzr&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@rahulshabd%20at%20@afsanaPodcast%20&url=http%3A%2F%2Fbit.ly%2F1Qf7Dzr&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
-</p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Rachna (Hindi)</p></td>
-  <td><p><audio src = "../mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-<tr>
-  <td><p>Beti ka byaah (Hindi)</p></td>
-  <td><p><audio src = "../mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Rachna (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rs_rachna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Beti ka byaah (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
