--- a/html/author_sa.html
+++ b/html/author_sa.html
@@ -36,19 +36,17 @@ $(function(){
 
 <p><img src="../images/sa.png" class="w3-circle border"/>Syed Aatirah is an engineering student from Kashmir. Her passion for writing and literature is inherited from her maternal family. She welcomes critics; she is passionate about learning and hopes to excel.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@SyedAatirah%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F21bCop1&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@SyedAatirah%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F21bCop1&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  
-</p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Musafir (Kashmiri/Koshur)</p></td>
-  <td><p><audio src = "../mp3/sa_musafir.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Musafir (Kashmiri/Koshur)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/sa_musafir.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
