--- a/html/author_sr.html
+++ b/html/author_sr.html
@@ -36,17 +36,17 @@ $(function(){
 
 <p><img src="../images/sr.png" class="w3-circle border"/>Sandhya Rathore is an engineer, mother, daughter, sister, friend, and &mdash; in the midst of being all of these &mdash; a writer. She likes to dream; some of these have come true. She's been interested in writing since childhood. Over time, she's seen many faces of life &mdash; some good, some bad &mdash; and when she found herself unable to speak out, she wrote. With gusto. Her heart is that of a poet's &mdash; like glass. It's endured several cracks but she treasures it nevertheless. Her writings are but descriptions of events in life around her; it is her trifling attempt to string them through words.</p>
 
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@saanjh_savere%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1oAYUMd&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+
+<p>&nbsp;</p>
+
 <div class="w3-responsive">
-<table class="w3-table w3-bordered">
-<tr>
-  <td><p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@saanjh_savere%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1oAYUMd&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p></td>
-  <td><p>&nbsp;</p></td>
-</tr>
-<tr>
-  <td><p>Baarish (Hindi)</p></td>
-  <td><p><audio src = "../mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></td>
-</tr>
-</table>
+
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p>Baarish (Hindi)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
+
 </div>
 
 </div>
