--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -34,7 +34,7 @@ $(function(){
 
 <header class = "w3-padding"><h2>Hindi audio stories</h2></header>
 
-<p>Trivia: Udaant Martand, published from Calcutta, was the first Hindi newspaper of India. It was born in 1826 and lived only for about 18 months. Calcutta's association with "firsts" in Hindi does not stop here, though. The very first gramophone record that was cut in India was in Hindi, and in the voice of Gauhar Jaan, a Calcutta courtesan.</p>
+<p>Trivia: The first Hindi newspaper of India was Udaant Martand, published from Calcutta. The paper was born in 1826 and lived only for about 18 months. Calcutta's association with firsts in Hindi does not end here, though. The very first gramophone record that was cut in India was in Hindi and in the voice of Gauhar Jaan, a Calcutta courtesan.</p>
 
 <p class = "w3-small">
 <a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Hindi%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1ZfCccD&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
