--- a/html/language_bhojpuri.html
+++ b/html/language_bhojpuri.html
@@ -34,7 +34,7 @@ $(function(){
 
 <header class = "w3-padding"><h2>Bhojpuri audio stories</h2></header>
 
-<p>Trivia: Bhojpuri is one of the national languages of Fiji, Guyana, and Surinam. Its closest sisters are Magahi and Maithili. Although today it is written mostly in the Devnagari script, in earlier times, Bhojpuri used the <a href= "#kaithi">Kaithi script</a>.</p>
+<p>Trivia: Bhojpuri is one of the national languages of Fiji, Guyana, and Surinam. Its closest sisters are Magahi and Maithili. Although today it is written mostly in the Devnagari script, in earlier times, Bhojpuri used the Kaithi script.</p>
 
 <p class = "w3-small">
 <a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Bhojpuri%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F22zDTTO&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
@@ -53,23 +53,6 @@ $(function(){
 </div>
 
 <div id = "footer"></div>
-
-<div id="kaithi" class="w3-modal">
-  <div class="w3-modal-dialog">
-    <div class="w3-modal-content w3-card-4">
-      <header class="w3-container w3-theme-l4"> 
-        <a href="#" class="w3-closebtn w3-text-grey">&times;</a>
-        <h5 class = " w3-text-dark-grey">Kaithi script: a Bhojpuri story written by Babu Rama Smaran Lal in 1898</h5>
-      </header>
-      <div class="w3-container">        
-		<p class = "w3-text-grey w3-small"><img src = "../images/Kaithi2.jpg"/></p>
-      </div>
-      <footer class="w3-container w3-theme-l4">
-        <p>Public Domain, https://en.wikipedia.org/w/index.php?curid=20533215</p>
-      </footer>
-    </div>
-  </div>
-</div>
 
 </body>
 
