calling minimised JS

--- a/html/author_anon.html
+++ b/html/author_anon.html
@@ -16,7 +16,8 @@
 
 <link rel="canonical" href="https://afsanapodcast.github.io/afsana/html/author_anon.html" />
 
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<!--<script src="//code.jquery.com/jquery-1.10.2.js"></script>-->
+<script src = "../js/jquery-1.10.2.min.js"></script>
 <script> 
 $(function(){
   $("#header").load("header.html"); 
@@ -34,7 +35,7 @@ $(function(){
 
 <header class = "w3-padding"><h2>Street sounds</h2></header>
 
-<p><!--<img src="../images/anon.png" class="w3-circle border"/>-->Life, as we hear it around us, telling us stories.</p>
+<p>Life, as we hear it around us, telling us stories.</p>
 
 <p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
 
