--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -16,7 +16,8 @@
 
 <link rel="canonical" href="https://afsanapodcast.github.io/afsana/html/author_ab.html" />
 
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<!--<script src="//code.jquery.com/jquery-1.10.2.js"></script>-->
+<script src = "../js/jquery-1.10.2.min.js"></script>
 <script> 
 $(function(){
   $("#header").load("header.html"); 
