--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -88,6 +88,10 @@ $(function(){
   <div class="w3-col s6"><p><img src="../images/mk_tiny.png" class="w3-circle borderwhite" alt="Mohammad Kausen"/>&nbsp;&nbsp;Badchalan (Mohammad Kausen)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
+<div class="w3-row-padding w3-border">
+  <div class="w3-col s6"><p><img src="../images/ap_tiny.png" class="w3-circle borderwhite" alt="Ajay Purohit"/>&nbsp;&nbsp;Chetana (Ajay Purohit)</p></div>
+  <div class="w3-col s6"><p><audio src = "../mp3/ap_chetna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
 
 </div>
 
