--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Badchalan</h3>
-  <p class="w3-text-grey w3-small">Hindi, 24 Mar 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/mk_small.png" class="w3-circle border"/> <audio src = "./mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Mohammad Kausen</h3>
+<h3 class = "w3-border-bottom">Chetana</h3>
+  <p class="w3-text-grey w3-small">Hindi, 31 Mar 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/ap_small.png" class="w3-circle border"/> <audio src = "./mp3/ap_chetna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Ajay Purohit</h3>
 </div> 
 </div>
 </div>
@@ -72,10 +72,10 @@ function myContrFunction() {
 <div class="w3-row">
 <div class = "w3-card w3-third doubleborder">
 <div class = "w3-container w3-theme-l5">
-<h3 class = "w3-border-bottom">Amit chhaap</h3>
-  <p class="w3-text-grey w3-small">Hindi, 22 Mar 2016</p>
-  <p class = "w3-padding-tiny"><img src="./images/rr_small.png" class="w3-circle border"/> <audio src = "./mp3/rr_phagun.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
-<h3 class = "w3-border-top">Ruchi Rana</h3>
+<h3 class = "w3-border-bottom">Badchalan</h3>
+  <p class="w3-text-grey w3-small">Hindi, 24 Mar 2016</p>
+  <p class = "w3-padding-tiny"><img src="./images/mk_small.png" class="w3-circle border"/> <audio src = "./mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p>
+<h3 class = "w3-border-top">Mohammad Kausen</h3>
 </div> 
 </div>
 </div>
@@ -151,12 +151,12 @@ function myContrFunction() {
 </a>
 </div>
 
-<!--<div class="authorcard w3-center w3-round-large">
+<div class="authorcard w3-center w3-round-large">
 <a href = "./html/author_ap.html" title = "Podcasts by Ajay Purohit" class = "anoline">
 <p>Ajay Purohit</p>
 <img src="./images/ap_small.png" class="w3-circle borderwhite" alt="Ajay Purohit"/>
 </a>
-</div>-->
+</div>
 
 </div>
 
