show more on click

--- a/html/language_hindi.html
+++ b/html/language_hindi.html
@@ -60,6 +60,14 @@ $(function(){
   <div class="w3-col s6"><p><img src="../images/ss_tiny.png" class="w3-circle borderwhite" alt="Shishir Somvanshi"/>&nbsp;&nbsp;Punarjanm (Shishir Somvanshi)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/ss_punarjanm.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
+<p class = "w3-small"><a onclick="myFunction()" class = "w3-btn w3-round-jumbo w3-white border">Load more podcasts</a></p>
+<script>
+function myFunction() {
+    document.getElementById("p2").classList.toggle("w3-show");
+}
+</script>
+
+<div id = "p2" class="w3-hide">
 <div class="w3-row-padding w3-border">
   <div class="w3-col s6"><p><img src="../images/rr_tiny.png" class="w3-circle borderwhite" alt="Ruchi Rana"/>&nbsp;&nbsp;Kaghaz ki khwahishein (Ruchi Rana)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/rr_aas.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
@@ -76,6 +84,15 @@ $(function(){
   <div class="w3-col s6"><p><img src="../images/sr_tiny.png" class="w3-circle borderwhite" alt="Sandhya Rathore"/>&nbsp;&nbsp;Baarish (Sandhya Rathore)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/sr_barish.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
+<p class = "w3-small"><a onclick="myFunction2()" class = "w3-btn w3-round-jumbo w3-white border">Load more podcasts</a></p>
+<script>
+function myFunction2() {
+    document.getElementById("p3").classList.toggle("w3-show");
+}
+</script>
+</div>
+
+<div id = "p3" class="w3-hide">
 <div class="w3-row-padding w3-border">
   <div class="w3-col s6"><p><img src="../images/rs_tiny.png" class="w3-circle borderwhite" alt="Rahul Shabd"/>&nbsp;&nbsp;Beti ka byaah (Rahul Shabd)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/rs_byah.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
@@ -88,9 +105,19 @@ $(function(){
   <div class="w3-col s6"><p><img src="../images/mk_tiny.png" class="w3-circle borderwhite" alt="Mohammad Kausen"/>&nbsp;&nbsp;Badchalan (Mohammad Kausen)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/mk_badchalan.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
 </div>
+<p class = "w3-small"><a onclick="myFunction3()" class = "w3-btn w3-round-jumbo w3-white border">Load more podcasts</a></p>
+<script>
+function myFunction3() {
+    document.getElementById("p4").classList.toggle("w3-show");
+}
+</script>
+</div>
+
+<div id = "p4" class="w3-hide">
 <div class="w3-row-padding w3-border">
   <div class="w3-col s6"><p><img src="../images/ap_tiny.png" class="w3-circle borderwhite" alt="Ajay Purohit"/>&nbsp;&nbsp;Chetana (Ajay Purohit)</p></div>
   <div class="w3-col s6"><p><audio src = "../mp3/ap_chetna.mp3" controls = "controls"><i>There's an embedded audio clip here that's not supported by your browser. Use a modern browser.</i></audio></p></div>
+</div>
 </div>
 
 </div>
