--- a/html/Sitemap.htm
+++ b/html/Sitemap.htm
@@ -44,9 +44,10 @@
 <a href="https://afsanapodcast.github.io/afsana/"><span class="title">Afsana Podcast</span></a>
 <ul><li>Storytellers
 <ul>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_ap.html"><span class="title">Ajay Purohit (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_ab.html"><span class="title">Anindita Basu (Hindi)</span></a></li>
-<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_ap.html"><span class="title">Ajay Purohit (Hindi)</span></a></li>-->
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_mk.html"><span class="title">Mohammad Kausen (Hindi)</span></a></li>
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/author_pp.html"><span class="title">Prabhakar Pandey (Bhojpuri)</span></a></li>-->
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_pk.html"><span class="title">Preran Kumar (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_rs.html"><span class="title">Rahul Shabd (Hindi)</span></a></li>
 <li><a href="https://afsanapodcast.github.io/afsana/html/author_rr.html"><span class="title">Ruchi Rana (Hindi)</span></a></li>
@@ -63,7 +64,7 @@
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_hindi.html"><span class="title">Hindi stories</span></a></li>
 <!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_kannada.html"><span class="title">Kannada stories</span></a></li>-->
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_kashmiri.html"><span class="title">Kashmiri stories</span></a></li>
-<li><a href="https://afsanapodcast.github.io/afsana/html/author_anon.html"><span class="title">Street sounds</span></a></li>
+<li><a href="https://afsanapodcast.github.io/afsana/html/author_anon.html"><span class="title">Street sounds (Quick Bytes)</span></a></li>
 </ul>
 </li></ul>
 <ul><li>Instructions
