--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ function myContrFunction() {
 
 <div id = "languages" class = "w3-container">
 
-<p class = "w3-small"><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri/Koshur</a><!--&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kannada.html" class="w3-btn w3-white w3-round-jumbo border">Kannada</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bengali.html" class="w3-btn w3-white w3-round-jumbo border">Bengali/Bangla</a>-->&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Life</a></p>
+<p class = "w3-small"><a href = "./html/language_hindi.html" class="w3-btn w3-white w3-round-jumbo border">Hindi</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kashmiri.html" class="w3-btn w3-white w3-round-jumbo border">Kashmiri/Koshur</a><!--&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_kannada.html" class="w3-btn w3-white w3-round-jumbo border">Kannada</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/language_bengali.html" class="w3-btn w3-white w3-round-jumbo border">Bengali/Bangla</a>-->&nbsp;&nbsp;&nbsp;&nbsp;<a href = "./html/author_anon.html" class="w3-btn w3-white w3-round-jumbo border">Street sounds/Quick Bytes</a></p>
 
 </div>
 
@@ -174,7 +174,7 @@ function myContrFunction() {
 
 <p class = "w3-small w3-right-align"><a href = "#ack" class="w3-btn w3-white w3-round-jumbo border">Acknowledgements</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#contact" class="w3-btn w3-white w3-round-jumbo border">Contact</a></p>
 
-<p class = "w3-small">&copy;2016&nbsp;&nbsp;<a href = "Sitemap.htm"/>Sitemap</a></p>
+<p class = "w3-small">&copy;2016&nbsp;&nbsp;<a href = "./html/Sitemap.htm"/>Sitemap</a></p>
 
 </div>
 
