--- a/html/Sitemap.htm
+++ b/html/Sitemap.htm
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>HTML Sitemap</title>
+    <title>HTML Sitemap for Afsana Podcast</title>
     <meta id="MetaDescription" name="description" content="Sitemap created using Xml Sitemap Generator .org - the free online Google XML sitemap generator" />
     <meta id="MetaKeywords" name="keywords" content="XML Sitemap Generator" />
     <meta content="Xml Sitemap Generator .org" name="Author" />
@@ -34,7 +34,7 @@
 <body>
 <div id="xsg">
 <div id="xsgHeader">
-    <h1><a href="https://XmlSitemapGenerator.org/sitemap-generator.aspx" title="Sitemap Generator">HTML Sitemap</a></h1>
+    <h1><a href="https://XmlSitemapGenerator.org/sitemap-generator.aspx" title="Sitemap Generator">Sitemap</a></h1>
 </div>
 <div id="xsgBody">
 
