--- a/sitemap.html
+++ b/sitemap.html
@@ -61,6 +61,7 @@
 <ul><li>Languages
 <ul>
 <!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_bengali.html"><span class="title">Bengali stories</span></a></li>-->
+<!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_bhojpuri.html"><span class="title">Bhojpuri stories</span></a></li>-->
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_hindi.html"><span class="title">Hindi stories</span></a></li>
 <!--<li><a href="https://afsanapodcast.github.io/afsana/html/language_kannada.html"><span class="title">Kannada stories</span></a></li>-->
 <li><a href="https://afsanapodcast.github.io/afsana/html/language_kashmiri.html"><span class="title">Kashmiri stories</span></a></li>
