--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ function myContrFunction() {
 
 <p class = "w3-small w3-right-align"><a href = "#ack" class="w3-btn w3-white w3-round-jumbo border">Acknowledgements</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = "#contact" class="w3-btn w3-white w3-round-jumbo border">Contact</a></p>
 
-<p class = "w3-small">&copy;2016&nbsp;&nbsp;<a href = "./html/Sitemap.htm"/>Sitemap</a></p>
+<p class = "w3-small">&copy;2016&nbsp;&nbsp;<a href = "sitemap.html"/>Sitemap</a></p>
 
 </div>
 
