button text changes

--- a/html/author_anon.html
+++ b/html/author_anon.html
@@ -33,11 +33,11 @@ $(function(){
 
 <div id = "header"></div>
 
-<header class = "w3-padding"><h2>Street sounds</h2></header>
+<header class = "w3-padding"><h2>Street sounds (Quick Bytes)</h2></header>
 
 <p>Life, as we hear it around us, telling us stories.</p>
 
-<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Street%20sounds%20tell%20a%20thousand%20stories%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WACOUt" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
