--- a/html/author_mk.html
+++ b/html/author_mk.html
@@ -37,7 +37,7 @@ $(function(){
 
 <p><img src="../images/mk.png" class="w3-circle border"/>Mohammad Kausen is from the tiny village of Dadheru Khurd in Muzaffarnagar of Uttar Pradesh. He lives in Saudi Arabia. He likes art, music, cooking, writing, and anything artistic. He blogs at <a href = "http://mohd-kausen.blogspot.com/" target = "_blank"> मुसाफिर </a>.</p>
 
-<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@mohdkausen%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WQOKBz&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@mohdkausen%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1WQOKBz&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p> 
 
