--- a/html/author_pk.html
+++ b/html/author_pk.html
@@ -37,7 +37,7 @@ $(function(){
 
 <p><img src="../images/pk.jpg" class="w3-circle border"/>Preran Kumar lives in Toronto, the largest city of Canada. Besides writing, he likes to cook. He is extremely fond of Hindi films and counts himself among the foremost fans of Rekha and Amitabh Bachchan. He does not consider a day to be complete without a Lata Mangeshkar song, and he cannot sleep without reading a book. His days start with Mirabai's bhajans and often end with Jagjit Singh's ghazals. He hopes you'll like his stories.</p>
 
-<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Preran%20Kumar%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Pj7pAU&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20Preran%20Kumar%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Pj7pAU&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
