--- a/html/author_rr.html
+++ b/html/author_rr.html
@@ -37,7 +37,7 @@ $(function(){
 
 <p><img src="../images/rr.png" class="w3-circle border"/>Ruchi Rana lives in Germany and belongs to Allahabad. She carries the tehzeeb of Ganga-Jamuna and Sangam in her being. She is passionate about music, books, and writing, and adores jhumkis and Banarasi stoles. She loves to cook, and to grow plants and flowers in all seasons.  Her day begins with Pt. Bhimsen Joshi's Bhairvi and ends with Begum Akhtar's ethereal baritone.</p>
 
-<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@RuShiVi%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1RCjTs0&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@RuShiVi%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1RCjTs0&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
