--- a/html/author_sa.html
+++ b/html/author_sa.html
@@ -37,7 +37,7 @@ $(function(){
 
 <p><img src="../images/sa.png" class="w3-circle border"/>Syed Aatirah is an engineering student from Kashmir. Her passion for writing and literature is inherited from her maternal family. She welcomes critics; she is passionate about learning and hopes to excel.</p>
 
-<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@SyedAatirah%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F21bCop1&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@SyedAatirah%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F21bCop1&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
