--- a/html/author_sp.html
+++ b/html/author_sp.html
@@ -37,7 +37,7 @@ $(function(){
 
 <p><img src="../images/sp.png" class="w3-circle border"/>Is electrical-engineer-turned-technical-writer. Reads Kannada and English novels. Watches plays, movies, tennis, and cricket. Loves to travel.</p>
 
-<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Kannada%20audio%20stories%20by%20@saprasu%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Rr8pnu&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Kannada%20audio%20stories%20by%20@saprasu%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Rr8pnu&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
