--- a/html/author_sp2.html
+++ b/html/author_sp2.html
@@ -37,7 +37,7 @@ $(function(){
 
 <p><img src="../images/sp2.png" class="w3-circle border"/>Shankhadip Paria lives in Contai, near the sea town of Digha in West Bengal. He likes books, travelling, foods, friends, pirate legends, and Sundays. Shankhadip writes blog posts in Bengali once in a blue moon and, strongly believing that these posts are not the worst ones around, puts them up on his blog at <a href = "https://udorpindi.wordpress.com/" target = "_blank">https://udorpindi.wordpress.com/</a>.</p>
 
-<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Bengali%20audio%20stories%20by%20@_Shankha%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1SYxJGK&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Bengali%20audio%20stories%20by%20@_Shankha%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1SYxJGK&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
