--- a/html/header.html
+++ b/html/header.html
@@ -47,15 +47,15 @@
 	  <a href="author_anon.html">Life</a>
     </span>
 </span>
-&nbsp;&nbsp;<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>&nbsp;&nbsp;
+&nbsp;&nbsp;<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow on Twitter</a>&nbsp;&nbsp;
 <span class = "w3-dropdown-click">
-<button onclick="myContrFunction()" class = "w3-btn w3-round-jumbo w3-white border">Contribute</button>
+<button onclick="myContrFunction()" class = "w3-btn w3-round-jumbo w3-white border">Contribute your stories</button>
 	<span id = "contribute" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
       <a href="instructions.html">Audio stories</a>
       <a href="instructions_quickBytes.html">Quick bytes</a>
     </span>
 </span>
-<a href = "#subscribe" class = "w3-btn w3-round-jumbo w3-white border">Subscribe</a>
+<a href = "#subscribe" class = "w3-btn w3-round-jumbo w3-white border">Subscribe through email</a>
 </p>
 </div>
 
