--- a/html/instructions.html
+++ b/html/instructions.html
@@ -55,7 +55,7 @@ $(function(){
 </ul>
 
 <p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=How%20to%20publish%20an%20audio%20story%20podcast%20on%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1RZdJDw" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>
+<a href = "https://twitter.com/intent/tweet?text=How%20to%20publish%20an%20audio%20story%20podcast%20on%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1RZdJDw" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a>
 </p>
 
 <hr/>
