--- a/html/language_bengali.html
+++ b/html/language_bengali.html
@@ -38,7 +38,7 @@ $(function(){
 <p>Trivia: Bengali is referred to as Bangla by its native speakers. It was the Bengali language movement, and the lives lost therefor, that led UNESCO to declare February 21 as International Mother Language Day.</p>
 
 <p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Bengali%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Ww9JJW&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Bengali%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Ww9JJW&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
