--- a/html/language_bhojpuri.html
+++ b/html/language_bhojpuri.html
@@ -38,7 +38,7 @@ $(function(){
 <p>Trivia: Bhojpuri is one of the national languages of Fiji, Guyana, and Surinam. Its closest sisters are Magahi and Maithili. Although today it is written mostly in the Devnagari script, in earlier times, Bhojpuri used the Kaithi script.</p>
 
 <p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Bhojpuri%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F22zDTTO&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Bhojpuri%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F22zDTTO&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
