--- a/html/language_kannada.html
+++ b/html/language_kannada.html
@@ -38,7 +38,7 @@ $(function(){
 <p>Trivia: Kannada has given India the second-most number of Jnanpith awards: eight. It is also one of the six classical languages of India.</p>
 
 <p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Kannada%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Lv6iCR&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Kannada%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Lv6iCR&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
