--- a/html/language_kashmiri.html
+++ b/html/language_kashmiri.html
@@ -38,7 +38,7 @@ $(function(){
 <p>Trivia: The people of Kashmir refer to their language as Koshur, which is written in two scripts: Sharada and Perso-Arabic. Kashmiri belongs to Dardic group  of languages and is a cousin of other languages that are spoken in the Himayalan region, right up to eastern Afghanistan.</p>
 
 <p class = "w3-small">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Kashmiri%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1So8vRW&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Kashmiri%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1So8vRW&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
