--- a/html/author_ab.html
+++ b/html/author_ab.html
@@ -37,7 +37,7 @@ $(function(){
 
 <p><img src="../images/ab.PNG" class="w3-circle border"/>Anindita Basu likes words, languages, and stories; she dislikes whataboutery, laziness, and sweets.</p>
 
-<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Tfv4bl&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@anindita_basu%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Tfv4bl&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
