--- a/html/author_ss.html
+++ b/html/author_ss.html
@@ -37,7 +37,7 @@ $(function(){
 
 <p><img src="../images/ss.png" class="w3-circle border"/>Shishir Somvanshi is a forest scientist. He writes poems and stories on love and life. His blog is at <a href = "http://www.shishirkikavitayen.blogspot.in/" target = "_blank">http://www.shishirkikavitayen.blogspot.in/</a> and Facebook page at <a href = "http://www.facebook.com/shishirsomvanshiunlimited" target = "_blank">http://www.facebook.com/shishirsomvanshiunlimited</a>.</p>
 
-<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@Shishir_Som%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1NISHlv&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a></p>
+<p class = "w3-small"><a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20by%20@Shishir_Som%20at%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1NISHlv&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a></p>
 
 <p>&nbsp;</p>
 
