--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
 <header>
 <h1>Afsana Podcast</h1>
 <p class = "w3-small w3-right-align">
-<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Og8ppA&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Tweet</a>  
-<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow</a>  
+<a href = "https://twitter.com/intent/tweet?text=Audio%20stories%20in%20Indian%20languages%20written%20and%20narrated%20by%20non-famous%20Indians%20@afsanaPodcast&url=http%3A%2F%2Fbit.ly%2F1Og8ppA&hashtags=podcast,audiocast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Share this page</a>  
+<a href = "http://www.twitter.com/afsanaPodcast" class = "w3-btn w3-round-jumbo w3-white border" target = "_blank">Follow on Twitter</a>  
 <span class = "w3-dropdown-click">
-<button onclick="myContrFunction()" class = "w3-btn w3-round-jumbo w3-white border">Contribute</button>
+<button onclick="myContrFunction()" class = "w3-btn w3-round-jumbo w3-white border">Contribute your stories</button>
 	<span id = "contribute" class="w3-dropdown-content w3-card-2 w3-round-large w3-text-grey" style="width:175px">
       <a href="./html/instructions.html">Audio stories</a>
       <a href="./html/instructions_quickBytes.html">Quick bytes</a>
     </span>
 </span>
-<a href = "#subscribe" class = "w3-btn w3-round-jumbo w3-white border">Subscribe</a>
+<a href = "#subscribe" class = "w3-btn w3-round-jumbo w3-white border">Subscribe through email</a>
 </p>
 </header>
 
